tests/test_scope/bad/cycle_in_scope.catala_en
## Article

```catala
declaration scope A:
  context x content integer
  context y content integer
  context z content integer

scope A:
  definition y under condition x < 0 consequence equals - x
  definition y under condition x >= 0 consequence equals x
  definition z under condition y >= 1 consequence equals 10 / y
  definition z under condition y < 1 consequence equals y
  definition x equals z
```

```catala-test-inline
$ catala Interpret -s A
[ERROR] Cyclic dependency detected between the following variables of scope A:
  z → x → y → z

z is used here in the definition of x:
┌─⯈ tests/test_scope/bad/cycle_in_scope.catala_en:14.22-23:
└──┐
14 │   definition x equals z
   │                       ‾
   └─ Article

x is used here in the definition of y:
┌─⯈ tests/test_scope/bad/cycle_in_scope.catala_en:11.31-32:
└──┐
11 │   definition y under condition x >= 0 consequence equals x
   │                                ‾
   └─ Article

y is used here in the definition of z:
┌─⯈ tests/test_scope/bad/cycle_in_scope.catala_en:13.31-32:
└──┐
13 │   definition z under condition y < 1 consequence equals y
   │                                ‾
   └─ Article
#return code 255#
```
